--- a/scc/styles.css
+++ b/scc/styles.css
@@ -146,18 +146,15 @@ body {
 .hero {
   text-align: center;
   max-width: 1600px;
-  height: 600px;
   background-image: linear-gradient(transparent, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/fon.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-   margin-left: auto;
-   margin-right: auto ;
+  margin-left: auto;
+  margin-right: auto;
 }
-  
-}
-}
+
 .hero-container {
   padding: 200px 237px;
 }
@@ -170,8 +167,8 @@ body {
   color: var(--main-title-color);
   margin-bottom: 30px;
   width: 696px;
-  margin-left: auto;
-  margin-right: auto ;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 .hero-button {
@@ -348,8 +345,9 @@ body {
 .button:focus {
   color: var(--btn-acent-color);
   background: #188ce8;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 .portfolio-list {
   display: flex;
@@ -360,8 +358,9 @@ border-radius: 4px;
 .portfolio-item {
   margin: 15px;
 }
-.portfolio-item:hover{
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.portfolio-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .items-title {
